# peacock

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  slangdconfig.json
.github/workflows/: protect-main.yml
cmake/: FindNvproCore2.cmake
shader/: CMakeLists.txt
shader/peacock/: math.slang  medium.slang  resource.slang  volume.slang
shader/peacock/math/: bbox.slang  ray.slang
shader/peacock/medium/: heterogeneous.slang
shader/peacock/volume/: nanovdb.slang  uniform.slang
source/: CMakeLists.txt  main.cpp
source/peacock/: raytracer.cpp  raytracer.h  shaderio.h
source/peacock/_autogen/: raytrace.slang.dep  raytrace.slang.h  raytrace.slang.spv
source/peacock/common/: path_utils.h
source/peacock/shader/: raytrace.slang  renderer.slang
source/peacock/shader/module/: PNanoVDB.slang  camera.slang  light.slang  math.slang  medium.slang  phase.slang  random.slang  sampler.slang  shaderio.slang  shape.slang  volume.slang
source/peacock/shader/module/light/: area.slang  directional.slang  environment.slang
source/peacock/shader/module/math/: bbox.slang  define.slang  ray.slang
source/peacock/shader/module/medium/: grid.slang  heterogeneous.slang  homogeneous.slang  nanovdb.slang
source/peacock/shader/module/phase/: henyey_greenstein.slang
source/peacock/shader/module/shape/: disk.slang  rectangle.slang  triangle.slang
source/peacock/shader/module/volume/: grid.slang  nanovdb.slang  uniform.slang
source/peacock/shaders/: raytrace.slang  shaderio.h  shaderio.slang
vk_mini_path_tracer/: CMakeLists.txt  common.h  main.cpp  renderer.cpp  renderer.h
vk_mini_path_tracer/shaders/: raytrace.comp.glsl  raytrace.comp.glsl.spv  shaderCommon.h
